app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300&family=Roboto&display=swap');

html {
  scroll-behavior: smooth;
}

/* stack multiple svg backgrounds on top so as the user scrolls down a page, they have multiple backgrounds */
body {
  font-size: larger;
  background-repeat: no-repeat;
  --webkit-background-size: auto;
  --moz-background-size: auto;
  --o-background-size: auto;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  background-color: #edf4ed;
  background: url('/background.svg');
  background-size: cover;
}

@font-face {
  font-family: SIFONN;
  src: url("/SIFONN_BASIC.otf") format("opentype");
}

@font-face {
  font-family: consolas;
  src: url("/CONSOLA.TTF") format("truetype");
}

@layer base {
  :root {
    --background: 200 20% 98%;
    --btn-background: 200 10% 91%;
    --btn-background-hover: 200 10% 89%;
    --foreground: 200 50% 3%;
  }

  @media (prefers-color-scheme: dark) {
    :root {
      --background: 200 50% 3%;
      --btn-background: 200 10% 9%;
      --btn-background-hover: 200 10% 12%;
      --foreground: 200 20% 96%;
    }
  }
}

@layer base {
  * {
    @apply border-foreground/20;
  }
}


@layer components {
  .wh-link {
    @apply text-rose-500;
    @apply hover:underline;
    @apply hover:cursor-pointer
  }

  .wh-btn {
    @apply bg-rose-600;
    @apply rounded;
    @apply px-4;
    @apply py-2;
    @apply text-white;
    @apply font-bold;
    @apply mb-2;
    @apply hover:bg-rose-500;
    @apply disabled:cursor-wait;
    @apply transition-all;
  }

  .wh-subheading {
    @apply text-2xl;
    @apply lg:text-4xl;
    @apply md:text-3xl;
    @apply font-thin;
    @apply text-center;
    @apply font-sans;
  }

  .wh-dropdown {
    @apply block;
    @apply py-2.5;
    @apply px-0;
    @apply w-full;
    @apply bg-transparent;
    @apply border-0;
    @apply border-b-2;
    @apply appearance-none;
    @apply text-gray-400;
    @apply border-gray-700;
    @apply focus:outline-none;
    @apply focus:ring-0;
    @apply focus:border-gray-200;
    @apply mb-6;
  }
}

.animate-in {
  animation: animateIn 0.3s ease 0.15s both;
}

@keyframes animateIn {
  from {
    opacity: 0;
    transform: translateY(10px);
  }

  to {
    opacity: 1;
    transform: translateY(0);
  }
}

details summary::-webkit-details-marker {
  display: none;
}


details[open] summary {
  background: theme('colors.rose.800');
  color: white
}

details[open] summary::after {
  content: "-";
}

details[open] summary~* {
  animation: slideDown 0.3s ease-in-out;
}

details[open] summary p {
  opacity: 0;
  animation-name: showContent;
  animation-duration: 0.75s;
  /* animation-delay: 0.1s; */
  animation-fill-mode: forwards;
  margin: 0;
}

@keyframes showContent {
  from {
    opacity: 0;
    height: 0;
  }

  to {
    opacity: 1;
    height: auto;
  }
}

@keyframes slideDown {
  from {
    opacity: 0;
    height: 0;
    padding: 0;
  }

  to {
    opacity: 1;
    height: auto;
  }
}

.countdown:hover {
  /* box-shadow: 0 8px 32px 0 rgba(255, 255, 255, 0.37); */
  backdrop-filter: blur(10px);
  -webkit-backdrop-filter: blur(10px);
  padding-top: 25px;
  padding-bottom: 25px;
  border-radius: 10px;
  transition: all 0.1s ease-in;
  cursor: pointer;
  border: 1px solid theme('colors.rose.600');
}

.countdown {
  
  background: black;
  border: 1px solid rgb(38 38 38);
  color: white;
  padding: 15px;
  transition: all 0.2s ease-out;
  border-radius: 8px;
}

